Change access modifier of unit test