@@ -14,7 +14,7 @@ public class TramRouteOverlayTest {
   private final TramRouteOverlay profile = new TramRouteOverlay();
 
   @Test
-  public void testSourceFeatureProcessing() {
+  void testSourceFeatureProcessing() {
     // Test tram stops first, then tram routes
     var node = SimpleFeature.create(
       TestUtils.newPoint(5, 4),
@@ -22,9 +22,8 @@ public class TramRouteOverlayTest {
     );
     // Produce a one-element list with a node containing the tag railway=tram_stop
     List<FeatureCollector.Feature> mapFeatures = TestUtils.processSourceFeature(node, profile);
-    // Assertion cases
     assertEquals(1, mapFeatures.size());
-    var feature = mapFeatures.get(0);
+    var feature = mapFeatures.getFirst();
     assertEquals("tram_stop", feature.getLayer());
     assertEquals(11, feature.getMinZoom());
     // Create a fake route as well and test that in this unit test
